--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,7 @@
 	path = datawave-hazelcast-service
 	url = git@github.com:NationalSecurityAgency/datawave-hazelcast-service.git
 	branch = master
+[submodule "datawave-query-metric-service"]
+	path = datawave-query-metric-service
+	url = https://github.com/NationalSecurityAgency/datawave-query-metric-service.git
+	branch = master
