--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>datawave-config-service</module>
         <module>datawave-dictionary-service</module>
         <module>datawave-hazelcast-service</module>
+        <module>datawave-query-metric-service</module>
     </modules>
     <repositories>
         <repository>
