--- a/sample_configuration/authorization-mock.yml
+++ b/sample_configuration/authorization-mock.yml
@@ -32,6 +32,7 @@ mock:
       "[cn=testserver.example.com, ou=servers, o=example corp, c=us<cn=example corp ca, o=example corp, c=us>]":
         roles-to-auths:
           AuthorizedServer: DW_SERV
+          Administrator: DW_ADMIN
           FooRole: FOO
           BarRole: BAR
           DefRole: DEF
