DATAWAVE-PARENT: Added surefire plugin configuration and bumped version to 3.0.0-M5. Updated .gitmodules to use feature/spring-boot-2.4 branch for datawave-parent

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "datawave-parent"]
 	path = datawave-parent
 	url = git@github.com:NationalSecurityAgency/datawave-parent.git
-	branch = master
+	branch = feature/spring-boot-2.4
 [submodule "datawave-utils"]
 	path = datawave-utils
 	url = git@github.com:NationalSecurityAgency/datawave-utils.git
