--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>datawave-dictionary-service</module>
         <module>datawave-hazelcast-service</module>
         <module>datawave-query-metric-service</module>
+        <module>datawave-spring-boot-starter-query-metric</module>
     </modules>
     <repositories>
         <repository>
