--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
     <parent>
         <groupId>gov.nsa.datawave.microservice</groupId>
         <artifactId>datawave-microservice-parent</artifactId>
-        <version>1.8</version>
+        <version>1.9-SNAPSHOT</version>
     </parent>
     <artifactId>datawave-microservices-build-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <url>https://code.nsa.gov/datawave-microservices-root</url>
     <modules>
@@ -15,18 +15,18 @@
         <module>datawave-service-parent</module>
         <module>datawave-in-memory-accumulo</module>
         <module>datawave-accumulo-utils</module>
-        <module>datawave-common-utils</module>
+        <!--<module>datawave-common-utils</module>-->
         <module>datawave-metadata-utils</module>
-        <module>datawave-type-utils</module>
+        <!--<module>datawave-type-utils</module>-->
         <module>datawave-base-rest-responses</module>
-        <module>datawave-metrics-reporter</module>
+        <!--<module>datawave-metrics-reporter</module>-->
         <module>datawave-spring-boot-starter</module>
         <module>datawave-spring-boot-starter-audit</module>
         <module>datawave-spring-boot-starter-cache</module>
         <module>datawave-accumulo-service</module>
         <module>datawave-audit-service</module>
         <module>datawave-authorization-service</module>
-        <module>datawave-config-service</module>
+        <!--<module>datawave-config-service</module>-->
         <module>datawave-dictionary-service</module>
         <module>datawave-hazelcast-service</module>
     </modules>
