--- a/docker-all/docker-compose.yml
+++ b/docker-all/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: consul:1.9.8
     hostname: localhost
     environment:
-      - 'CONSUL_LOCAL_CONFIG={"datacenter": "demo_dc", "disable_update_check": true, "enable_agent_tls_for_checks": true, "key_file": "/etc/pki/testServer.key", "cert_file": "/etc/pki/testServer.cert", "ca_file": "/etc/pki/ca.pem", "verify_outgoing": true, "verify_server_hostname": false}'
+      - 'CONSUL_LOCAL_CONFIG={"datacenter": "demo_dc", "disable_update_check": true, "enable_agent_tls_for_checks": true, "key_file": "/etc/pki/testServer.key", "cert_file": "/etc/pki/testServer.cert", "ca_file": "/etc/pki/testCA.cert", "verify_outgoing": true, "verify_server_hostname": false}'
       - CONSUL_BIND_INTERFACE=eth0
     # defined as host:container
     ports:
@@ -51,7 +51,7 @@ services:
         condition: service_started
 
   configuration:
-    image: datawave/config-service:1.4
+    image: datawave/config-service:1.6
     entrypoint: ["java","-DlogDir=/logs","-jar","app.jar"]
     command:
       - --spring.output.ansi.enabled=ALWAYS
@@ -74,7 +74,7 @@ services:
         condition: service_started
 
   cache:
-    image: datawave/hazelcast-service:1.6
+    image: datawave/hazelcast-service:1.8
     entrypoint: ["java","-DlogDir=/logs","-jar","app.jar"]
     scale: 2
     command:
@@ -103,7 +103,7 @@ services:
         condition: service_started
 
   authorization:
-    image: datawave/authorization-service:1.10
+    image: datawave/authorization-service:1.14
     entrypoint: ["java","-DlogDir=/logs","-jar","app.jar"]
     scale: 1
     command:
@@ -128,7 +128,7 @@ services:
         condition: service_healthy
 
   accumulo:
-    image: datawave/accumulo-service:1.1.1
+    image: datawave/accumulo-service:1.4
     entrypoint: ["java","-DlogDir=/logs","-jar","app.jar"]
     scale: 1
     command:
@@ -159,7 +159,7 @@ services:
         condition: service_healthy
 
   audit:
-    image: datawave/audit-service:1.9
+    image: datawave/audit-service:1.10
     entrypoint: ["java","-DlogDir=/logs","-jar","app.jar"]
     scale: 1
     command:
@@ -184,7 +184,7 @@ services:
         condition: service_healthy
 
   metrics:
-    image: datawave/query-metric-service:1.4.4
+    image: datawave/query-metric-service:1.6.4
     entrypoint: ["java","-DlogDir=/logs","-jar","app.jar"]
     scale: 1
     command:
@@ -215,7 +215,7 @@ services:
         condition: service_healthy
 
   dictionary:
-    image: datawave/dictionary-service:1.1
+    image: datawave/dictionary-service:1.3
     entrypoint: ["java","-DlogDir=/logs","-jar","app.jar"]
     scale: 1
     command:
