Correct docker-all querymetric.yaml for mis-spellings, format issues

--- a/docker-all/config/querymetric.yml
+++ b/docker-all/config/querymetric.yml
@@ -56,8 +56,7 @@ datawave:
         recordWriterNumThreads: 4
         enableBloomFilter: false
         queryVisibility: PUBLIC
-        defaultMetricMarkings:
-          columnVisibility: PUBLIC
+        defaultMetricVisibility: PUBLIC
         baseMaps: "{}"
       timely:
         enabled: false
@@ -92,7 +91,7 @@ hazelcast:
           <!-- Evict the least frequently used entries first if we run out of space and allow 2GB for each cluster node to store data -->
           <!-- <eviction eviction-policy="LRU" max-size-policy="USED_NATIVE_MEMORY_SIZE" size="2048"/> -->
           <map-store enabled="true" initial-mode="LAZY">
-            <factory-class-name>datawave.microservice.querymetric.peristence.AccumuloMapStore$Factory</factory-class-name>
+            <factory-class-name>datawave.microservice.querymetric.persistence.AccumuloMapStore$Factory</factory-class-name>
             <write-delay-seconds>1</write-delay-seconds>
             <write-batch-size>1000</write-batch-size>
           </map-store>
@@ -109,7 +108,7 @@ hazelcast:
           <!-- Evict the least frequently used entries first if we run out of space and allow 2GB for each cluster node to store data -->
           <!-- <eviction eviction-policy="LFU" max-size-policy="USED_NATIVE_MEMORY_SIZE" size="2048"/> -->
           <map-store enabled="true" initial-mode="LAZY">
-            <factory-class-name>datawave.microservice.querymetric.peristence.AccumuloMapLoader$Factory</factory-class-name>
+            <factory-class-name>datawave.microservice.querymetric.persistence.AccumuloMapLoader$Factory</factory-class-name>
           </map-store>
         </map>
       </hazelcast>
