--- a/docker-all/docker-compose.yml
+++ b/docker-all/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: consul:1.9.8
     hostname: localhost
     environment:
-      - 'CONSUL_LOCAL_CONFIG={"datacenter": "demo_dc", "disable_update_check": true, "enable_agent_tls_for_checks": true, "key_file": "/etc/pki/testServer.key", "cert_file": "/etc/pki/testServer.cert", "ca_file": "/etc/pki/ca.pem", "verify_outgoing": true, "verify_server_hostname": false}'
+      - 'CONSUL_LOCAL_CONFIG={"datacenter": "demo_dc", "disable_update_check": true, "enable_agent_tls_for_checks": true, "key_file": "/etc/pki/testServer.key", "cert_file": "/etc/pki/testServer.cert", "ca_file": "/etc/pki/ca.cert", "verify_outgoing": true, "verify_server_hostname": false}'
       - CONSUL_BIND_INTERFACE=eth0
     # defined as host:container
     ports:
@@ -51,7 +51,7 @@ services:
         condition: service_started
 
   configuration:
-    image: datawave/config-service:1.5
+    image: datawave/config-service
     entrypoint: ["java","-DlogDir=/logs","-jar","app.jar"]
     command:
       - --spring.output.ansi.enabled=ALWAYS
